<resources>
    <string name="app_name">ND940C3-Project</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="notification_detail_action">see more details</string>

    <string name="notification_body">The project 3 Repository is downloaded.</string>

    <string name="download_success"> Success</string>
    <string name="download_fail"> Fail</string>
    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="glide_repository">Glide - Image Loading Library by BumpTech</string>
    <string name="udacity_repository">LoadApp - Current repository by Udacity</string>
    <string name="retrofit_repository">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
    <string name="download_cloud_image">download cloud image</string>
    <string name="filename">File Name</string>
    <string name="download_status">Status</string>
    <string name="status">Status</string>
    <string name="ok">Ok</string>
</resources>
